frontend/test/should_pass/defYield_004e.grg
using defYield;

test t
{
	pp:p(--- yield x);
---
	def -x:E1->;
}

pattern p(--- def -x:E1->)
{
	-y:EE->;
---
	yield { yield x = y; }	
}

