frontend/test/should_fail/computations_no_exec_method2.grg
using computations_no_exec_method2;

test t()
{
}
